# Sayit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  compose.yaml  pyproject.toml  sayit  setup
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: docker-common.sh
src/sayit/: __init__.py  __main__.py  cli.py  main.py  runtime.py  test_support.py  tui.py
src/sayit/app/: dto.py
src/sayit/app/services/: explain_service.py  rewrite_service.py
src/sayit/domain/: intents.py  models.py  planner.py  risks.py  scoring.py  validators.py
src/sayit/engines/: __init__.py
src/sayit/engines/ai/: __init__.py  base.py  manager.py  prompts.py  schemas.py
src/sayit/engines/ai/providers/: ollama.py  openai_compat.py
src/sayit/engines/local/: __init__.py  detector.py  generator.py  rules.py  templates.py
src/sayit/infra/: cache.py  config.py
src/sayit/input/: errors.py  language.py  normalizer.py
src/sayit/input/adapters/: __init__.py  argv.py  clipboard.py  file.py  stdin.py
src/sayit/output/: formatter.py  json_formatter.py  plain_formatter.py
src/sayit/rules/: zh.yaml
src/sayit/templates/zh/intents/: apology.yaml  complaint.yaml  follow_up.yaml  negotiation.yaml  refusal.yaml  request.yaml
src/sayit/templates/zh/phrases/: buffers.yaml  closers.yaml  openers.yaml
tests/integration/: test_cli.py
tests/unit/: test_cli_helpers.py  test_clipboard_adapter.py  test_detector.py  test_rewrite_service.py  test_validators.py
